Fix spacing in GitHub repo description

--- a/src/components/NewsList/NewsItem.css
+++ b/src/components/NewsList/NewsItem.css
@@ -11,6 +11,11 @@
     line-height: 1.6em;
 }
 
+.description {
+    margin-top: 15px;
+    margin-bottom: 0;
+}
+
 .footer {
     padding-top: 15px;
     line-height: 1.5em;
